k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: museum-app
  namespace: museum-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: museum
  template:
    metadata:
      labels:
        app: museum
    spec:
      containers:
        - name: museum
          image: vikiserafimovska/museum-app:latest
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
