k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: museum-db
  namespace: museum-namespace
spec:
  ports:
    - port: 5432
  clusterIP: None
  selector:
    app: museum-db
