k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: museum-ingress
  namespace: museum-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: museum.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: museum-service
                port:
                  number: 80
